--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@ strong {
 </head>
 <body>
     <header class="header">
-    <img src="C:\Users\HP\Desktop\13.png" alt="Logo" class="header-logo">
+    <img src="https://github.com/inversioneswealt/inversioneswealt/blob/main/13.png?raw=true" alt="Logo" class="header-logo">
     <button class="header-button">Quiero invertir</button>
   </header>
     <main>
@@ -409,7 +409,7 @@ strong {
 </a>
 
             <div class="box">
-                                            <img src="C:\Users\HP\Desktop\6.jpeg" alt="Descripción de la imagen">
+                                            <img src="https://github.com/inversioneswealt/inversioneswealt/blob/main/6.jpeg?raw=true" alt="Descripción de la imagen">
 
                 <h2 class="steps-title">Compra venta de autos</h2>
                 <p>Te gusta la compra y venta de autos pero no tienes el suficiente capital para comprar un auto o las herramientas para trabajarlo, en Inversiones WeAlt es un sistema que te permite hacer crecer tu dinero mediante la compra y venta de autos sin salir de tu casa.
