--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@ strong {
 <body>
     <header class="header">
     <img src="https://github.com/inversioneswealt/inversioneswealt/blob/main/13.png?raw=true" alt="Logo" class="header-logo">
-    <button class="header-button">Quiero invertir</button>
+    <button onclick="window.location.href='https://wa.me/2462941021';" class="header-button">Quiero invertir</button>
   </header>
     <main>
 
@@ -428,7 +428,7 @@ Nosotros nos encargaremos de admistrar tus finanzas los 365 del año, por lo que
 
  El 20% anual es fijo. Mínimo para invertir $1000. Pago cada 1 mes.
 Plazo mínimo 1 año.</p>
-<button>Habla con un asesor</button>
+<button onclick="window.location.href='https://wa.me/2462941021';">Habla con un asesor</button>
 
             </div>
 
@@ -473,7 +473,7 @@ Plazo mínimo 1 año.</p>
             <p><strong>Monto a depositar:</strong></p>
         </div>
     </div>
-    <button>Pide datos para depositar</button>
+    <button onclick="window.location.href='https://wa.me/2462941021';">Pide datos para depositar</button>
                 </div>
 
 
