--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@ strong {
 
 Nosotros nos encargaremos de admistrar tus finanzas los 365 del año, por lo que cada mes se realiza la venta de varios, después Inversiones WeAlt cobrará el 15% a manera de comisión para cubrir los gastos de operación y te entregará el <span class="bold-text">20%</span> restante anual o en automático sigue la reinversion hasta el siguiente ciclo y se te enviará otro contrato.</p>
 
-<button>Habla con un asesor</button>
+<button onclick="window.location.href='https://wa.me/2462941021';">Habla con un asesor</button>
 
  </div>
 
